--- a/osa1/puhelinluettelo/src/App.css
+++ b/osa1/puhelinluettelo/src/App.css
@@ -2,6 +2,26 @@ h1 {
   color: green;
 }
 
+.rootContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.form {
+  align-items: center;
+  margin: 10px;
+  padding: 5px;
+}
+
+.button {
+  margin-left: 20px;
+}
+
+.personList {
+  margin-right: 5px;
+}
+
 .error {
   color: red;
   background: lightgrey;
