--- a/osa1/puhelinluettelo/src/App.css
+++ b/osa1/puhelinluettelo/src/App.css
@@ -30,6 +30,7 @@ h1 {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+  margin-top: 20px;
 }
 .addedPerson {
   color: green;
@@ -39,6 +40,7 @@ h1 {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+  margin-top: 20px;
 }
 .deletePerson {
   color: red;
@@ -48,6 +50,7 @@ h1 {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+  margin-top: 20px;
 }
 .updatePerson {
 }
